--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/register
 spring.datasource.username=root
-spring.datasource.password=...............
+spring.datasource.password=123$Nick
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect = "org.hibernate.dialect.MySQL5Dialect"
