--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=123$Nick
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+server.port=7000
 #spring.jpa.properties.hibernate.dialect = "org.hibernate.dialect.MySQL5Dialect"
 spring.jpa.properties.hibernate.format_sql = true
